--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6873f3">  <td>19/05/04 19:51:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UrlValidation.valid()[pri:0, instance:com.validation.UrlValidation@217ed35e]">valid</td> 
-  <td>main@1169474473</td>   <td></td> </tr>
-<tr bgcolor="ebb071">  <td>19/05/04 19:51:27</td>   <td>7347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home.getBrowser()[pri:0, instance:com.test.Home@44c03695]">getBrowser</td> 
-  <td>main@1169474473</td>   <td></td> </tr>
+<tr bgcolor="93f1a9">  <td>19/05/06 12:16:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home.getBrowser(java.lang.String, java.lang.String)[pri:0, instance:com.test.Home@5aa9e4eb]">getBrowser</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="93f1a9">  <td>19/05/06 12:16:28</td>   <td>12865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home.getBrowser(java.lang.String, java.lang.String)[pri:0, instance:com.test.Home@5aa9e4eb]">getBrowser</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
 </table>
