--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6873f3">  <td>19/05/06 11:47:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home.getBrowser(java.lang.String, java.lang.String)[pri:0, instance:com.test.Home@2f4948e4]">getBrowser</td> 
-  <td>main@1955920234</td>   <td></td> </tr>
-<tr bgcolor="6873f3">  <td>19/05/06 11:48:03</td>   <td>10745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home.getBrowser(java.lang.String, java.lang.String)[pri:0, instance:com.test.Home@2f4948e4]">getBrowser</td> 
-  <td>main@1955920234</td>   <td></td> </tr>
-<tr bgcolor="6873f3">  <td>19/05/06 11:48:18</td>   <td>25503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home.getBrowser(java.lang.String, java.lang.String)[pri:0, instance:com.test.Home@2f4948e4]">getBrowser</td> 
-  <td>main@1955920234</td>   <td></td> </tr>
+<tr bgcolor="6efaab">  <td>19/05/07 15:30:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.testRunner.TRunner@4c178a76]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@815320891</td>   <td></td> </tr>
+<tr bgcolor="6efaab">  <td>19/05/07 15:30:08</td>   <td>301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.testRunner.TRunner@4c178a76]">feature</td> 
+  <td>main@815320891</td>   <td></td> </tr>
+<tr bgcolor="6efaab">  <td>19/05/07 15:30:37</td>   <td>29875</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.testRunner.TRunner@4c178a76]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@815320891</td>   <td></td> </tr>
 </table>
