--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93f1a9">  <td>19/05/06 12:16:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home.getBrowser(java.lang.String, java.lang.String)[pri:0, instance:com.test.Home@5aa9e4eb]">getBrowser</td> 
-  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="93f1a9">  <td>19/05/06 12:16:28</td>   <td>12865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Home.getBrowser(java.lang.String, java.lang.String)[pri:0, instance:com.test.Home@5aa9e4eb]">getBrowser</td> 
-  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="6efaab">  <td>19/05/07 15:54:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.testRunner.TRunner@4961f6af]">feature</td> 
+  <td>main@1620948027</td>   <td></td> </tr>
+<tr bgcolor="6efaab">  <td>19/05/07 15:54:52</td>   <td>-322</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.testRunner.TRunner@4961f6af]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1620948027</td>   <td></td> </tr>
+<tr bgcolor="6efaab">  <td>19/05/07 15:55:20</td>   <td>27412</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.testRunner.TRunner@4961f6af]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1620948027</td>   <td></td> </tr>
 </table>
